public/styles/stylesheet.css
:root{
    font-family: Arial, Helvetica, sans-serif;
    --bg-col: #F8F9FC;
    --bg-container-col: #ffffff;
    --bg-open-col: #7fe66c;
    --bg-close-col: #ed0e0e;
    --brd-col: #E0E0E0;
    --txt-header-col: #222838;
    --checkout-btn-col: #7174ff;
}

body, html {
    margin: 0;
    height: 100%;
    overflow: none;
}

body {
    background-color: var(--bg-col);
    /* background-image: url(/img/zlogo.png); */
    background-repeat: no-repeat;
    background-position: left, center;
    background-size: 30%;
}

.wrapper {
    position: relative;
    top: 5vh;
    margin: 0 8%;
    display: flex;
    flex-direction: column;
    gap: 8px;
    height: 95vh;
    overflow: hidden;
}

.wrappa {
    display: flex;
    flex-direction: row;
    gap: 8px;
    flex: 1;
}

.header {
    position: sticky;
    top: 0;
    background-color: var(--bg-container-col);
    border: 1px solid var(--brd-col);
    border-radius: 6px;
    padding: 16px 12px 16px 12px;
    display: flex;
    gap: 6px;
    justify-content: space-between;
    align-items: center;
    z-index: 1;

    .name {
        .headerText {
            color: var(--header-col);
            font-size: 18pt;
            margin: 0;
        }
    }

    .alignRight {
        justify-content: flex-end;

        .status {
            padding: 6px 12px 6px 12px;
            border-radius: 4px;
            display: flex;
            flex-direction: column;
            
            
            span {
                font-weight: bold;
                font-size: 12pt;
            }
        }
    }
}

.container {
    background-color: var(--bg-container-col);
    border: 1px solid var(--brd-col);
    border-radius: 6px;
    display: flex;
    flex-direction: row;
    column-gap: 8px;
    flex: 1;
    height: 82vh;
}

#content {
    flex: 1;
}

#cart {
    flex-direction: column;
    padding: 0;
    width: 340px;
    flex: 0 0 340px;
    justify-content: space-between;

    h1 {
        margin: 0;
        color: var(--header-col);
    }
}

.filters {
    display: flex;
    flex-direction: column;
    width: 240px;
    flex: 0 0 240px;
}

.catalog {
    display: block;
    float: left;
    overflow-y: auto;
    flex: 1;
    padding-top: 8px;
}

.modifyInfo {
    display: flex;
    flex-direction: column;
    padding: 0;
    margin: 0;
    border-bottom: 1px solid var(--brd-col);    
    padding-bottom: 4px;
}

.modifyImage {
    height: 330px;
    width: 340px;
}

.modifyText {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding: 0 12px 0 12px;
    margin: 0;

    color: white;
    mix-blend-mode: difference;

    .name {
        margin: 0;
        padding: 0;
    }
    
    .price {
        margin: 0;
        padding: 0;
    }
}

.modifiers {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    padding: 6px 10px 6px 10px;

    .slider {
        display: flex;
        flex-direction: column;
        column-gap: 4px;

        .modifierName {
            font-size: 9pt;
            margin: 0;
            padding: 0;
        }

        .bar {
            display: flex;
            flex-direction: row;
            row-gap: 4px;

            .value {
                width: 100%;
                margin: 2px 6px 2px 6px;
            }

            .value::-webkit-slider-thumb {
                width: 4px;
                height: 4px;
                cursor: pointer;
            }

            .range {
                font-size: 8pt;
                margin: 0;
                padding: 0;
                align-self: center;
                user-select: none;
            }

        }
    }

}

.checkoutContainer {
    display: flex;
    justify-content: flex-end;
    padding-bottom: 10px;
    margin-top: auto;
    
    .checkoutButton {
        cursor: pointer;
        background-color: var(--checkout-btn-col);
        border: none;
        border-radius: 4px;
        display: block;
        margin: auto;
        padding: 0;
        height: 48px;
        width: 94%;
        box-shadow: 1px 1px 1px 1px #00000038;
        font-family: arial;
        font-weight: bold;
        font-size: 16pt;
        color: rgb(0, 0, 0);
    }
}

